--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -60,6 +60,8 @@
             display: flex;
             align-items: center;
             transition: all 0.4s ease;
+            text-decoration: none;
+            color: white;
 
             .socialIconItem {
                 width: 2.5rem;
